# cls-automl

./: .gitignore  README.md  get-mnist-dataset_mac.sh  pyproject.toml
hierarchical_cfg_synthesis/: cfg_repository.py
synthesis/: convolutional_repository.py  experiment_repository.py  iris_synthesis.py  iris_synthesis_pytorch.py  linear_repository.py  mnist_synthesis.py
